# safari-bookmarks-cli

./: .flake8  README.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  create-release.yml  publish.yml
scripts/: bootstrap.sh
src/safaribookmarks/: __init__.py  __main__.py  cli.py  helpers.py  main.py  models.py  safaribookmarks.py
tests/: test_cli.py  test_helpers.py  test_models.py  test_safaribookmarks.py
tests/support/fixtures/: Bookmarks.xml  add-fixed-uuid-leaf.plist  add-fixed-uuid-leaf.txt  add-fixed-uuid-list.plist  add-fixed-uuid-list.txt  add-fixed-uuid-no-title-leaf.plist  add-fixed-uuid-no-title-leaf.txt  add-leaf.plist  add-leaf.txt  add-list.plist  add-list.txt  add-no-title-leaf.plist  add-no-title-leaf.txt  edit-title-leaf.plist  edit-title-leaf.txt  edit-title-list.plist  edit-title-list.txt  edit-title-url-leaf.plist  edit-title-url-leaf.txt  edit-url-leaf.plist  edit-url-leaf.txt  empty.plist  empty.txt  list-format.txt  list-leaf.txt  list-target.txt  list.json  list.txt  move-leaf.plist  move-leaf.txt  move-list.plist  move-list.txt  remove-leaf.plist  remove-leaf.txt  remove-list.plist  remove-list.txt  remove-multiple.txt
